--- a/css/style.css
+++ b/css/style.css
@@ -2,35 +2,20 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: sans-serif, Arial, Helvetica ;
+    font-family: sans-serif, Arial, Helvetica;
 }
 
-.header{
+.header {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    position: relative;
-    color: white;
     padding: 2em;
-}
-
-.background-header {
     background-color: black;
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    display: block;
-    z-index: -1;
-    background-image: url('./css/clouds.png');
-    background-position: center;
+    position: relative;
 }
 
-@keyframes cloudMove {
-    0%{
-        left: 0;
-    }
-    100%{
-        left: -100%;
-    }
+.header h1 {
+    color: white;
+    z-index: 1;
 }
