--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,14 @@
 }
 
 .header h1 {
+    text-transform: uppercase;
     color: white;
     z-index: 1;
+    background: linear-gradient(180deg, rgb(0, 0, 0) 0%, rgb(0, 0, 0) 43%, rgba(255, 255, 255, 0) 100%);
+}
+
+/* main content*/
+
+.hidden{
+    display: none;
 }
