--- a/css/animationsCss.css
+++ b/css/animationsCss.css
@@ -1,9 +1,8 @@
 .sky {
-    display: block;
+    max-width: 1200px;
     position: absolute;
     width: 100%;
     height: 100%;
-    background: linear-gradient(180deg, rgba(0, 0, 0, 0.7063200280112045) 0%, rgba(0, 0, 0, 0.5970763305322129) 43%, rgba(121, 12, 153, 0.7483368347338936) 100%);
 }
 
 .stars {
