--- a/css/style.css
+++ b/css/style.css
@@ -12,8 +12,9 @@
     justify-content: center;
     padding: 2em;
     background-color: black;
-    background: linear-gradient(180deg, rgb(0, 0, 0) 0%, rgb(0, 0, 0) 43%, rgb(120, 12, 153) 100%);
+    background: linear-gradient(180deg, rgb(0, 0, 0) 0%, rgb(0, 0, 0) 43%, rgb(47, 76, 90) 100%);
     position: relative;
+    border-bottom: solid rgb(238, 234, 234) 1px;
 }
 
 .header h1 {
@@ -25,6 +26,83 @@
 
 /* main content*/
 
-.hidden{
+.hidden {
     display: none;
+}
+
+main {
+    background-color: rgb(46, 46, 46);
+}
+
+.main-section {
+    background-image: url('./blackHole.png');
+    width: 100%;
+    margin: 0 auto;
+    height: calc(100vh - 103px);
+    background-position: center;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+
+.pomodoro-timer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    width: 300px;
+    height: 300px;
+    z-index: 1;
+    border-radius: 50%;
+    background: radial-gradient(circle, rgba(0, 0, 0, 1) 57%, rgba(32, 32, 32, 0.7595413165266106) 98%);
+    position: relative;
+}
+
+.spin-efects{
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    z-index: -1;
+    position: absolute;
+}
+
+.spin-efects::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    width: 2rem;
+    height: 18rem;
+
+    background-color: rgb(0, 0, 0);
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(90deg);
+    }
+}
+
+
+.timer {
+    
+    display: block;
+    color: white;
+    padding: 3rem 1rem;
+    font-size: 2.8rem;
+}
+
+
+.options-timer {
+    display: block;
+}
+
+.options-timer button:hover{
+    background-color: rgb(161, 98, 16);
 }
