--- a/css/style.css
+++ b/css/style.css
@@ -59,30 +59,6 @@ main {
     position: relative;
 }
 
-.spin-efects{
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
-    z-index: -1;
-    position: absolute;
-    left: -5rem;
-}
-
-.spin{
-    position: absolute;
-    top: -5rem;
-}
-
-@keyframes spin {
-    0% {
-        transform: rotate(0deg);
-    }
-
-    100% {
-        transform: rotate(90deg);
-    }
-}
-
 .timer {
     display: block;
     color: white;
@@ -90,11 +66,16 @@ main {
     font-size: 2.8rem;
 }
 
-
 .options-timer {
     display: block;
 }
 
 .options-timer button:hover{
     background-color: rgb(161, 98, 16);
+}
+
+
+.more{
+    position: absolute;
+    bottom: 5%;
 }
