--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,10 @@
     font-family: sans-serif, Arial, Helvetica;
 }
 
+body{
+    max-width: 100%;
+}
+
 .header {
     display: flex;
     flex-direction: row;
@@ -44,7 +48,8 @@ main {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-
+    position: relative;
+    overflow: hidden;
 }
 
 .pomodoro-timer {
@@ -77,7 +82,6 @@ main {
     border-radius: 50%;
     background-color: rgb(44, 44, 44);
     position: absolute;
-
     animation: spinAnimation 8s linear infinite;
 }
 
