--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
     font-family: sans-serif, Arial, Helvetica;
 }
 
-body{
+body {
     max-width: 100%;
 }
 
@@ -30,7 +30,7 @@ body{
 /* main content*/
 
 .hidden {
-    display: none;
+    display: none !important;
 }
 
 main {
@@ -40,16 +40,18 @@ main {
 .main-section {
     background-image: url('./blackHole.png');
     width: 100%;
-    margin: 0 auto;
-    height: calc(100vh - 103px);
     background-position: center;
     background-size: cover;
+    overflow: hidden;
+}
+
+.section-content-main{
+    height: calc(100vh - 103px - 90.781px);
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     position: relative;
-    overflow: hidden;
 }
 
 .pomodoro-timer {
@@ -103,15 +105,51 @@ main {
 }
 
 .options-timer {
-    display: block;
+    display: flex;
+    gap: 1rem;
 }
 
-.options-timer button:hover {
-    background-color: rgb(161, 98, 16);
+.options-timer button, .more {
+    width: max-content;
+    padding: 0 0.3rem;
+    height: 2rem;
+    background-color: rgb(202, 201, 201);
+    outline: none;
+    border: solid white 0.1rem;
+    color: rgb(90, 90, 90);
+    text-transform: uppercase;
+    font-weight: bolder;
+    font-size: 1.2rem;
+    border-radius: 0.2rem;
+    transition: all 300ms ease-in-out;
 }
 
+.options-timer button:hover ,.more:hover{
+    background-color: rgb(80, 78, 78);
+    color: rgb(255, 255, 255);
+}
 
 .more {
     position: absolute;
-    bottom: 5%;
+    bottom: 4%; 
+    left: 50%;
+    transform: translateX(-50%);
 }
+
+/* footer */
+
+.footer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 0.5rem;
+    border-top: black 0.1rem solid;
+    background-color:rgb(47, 76, 90);
+    color: white;
+}
+
+.footer-content{
+    width: max-content;
+    padding: 0.3rem;
+}
+
