--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ main {
     overflow: hidden;
 }
 
-.section-content-main{
+.section-content-main {
     height: calc(100vh - 103px - 90.781px);
     display: flex;
     flex-direction: column;
@@ -109,7 +109,8 @@ main {
     gap: 1rem;
 }
 
-.options-timer button, .more {
+.options-timer button,
+.more {
     width: max-content;
     padding: 0 0.3rem;
     height: 2rem;
@@ -124,32 +125,70 @@ main {
     transition: all 300ms ease-in-out;
 }
 
-.options-timer button:hover ,.more:hover{
+.options-timer button:hover,
+.more:hover {
     background-color: rgb(80, 78, 78);
     color: rgb(255, 255, 255);
 }
 
 .more {
     position: absolute;
-    bottom: 4%; 
+    bottom: 4%;
     left: 50%;
     transform: translateX(-50%);
 }
 
+/* section-content-more */
+
+.section-content-more {
+    border-top: rgba(2, 2, 2, 0.404) solid 0.1rem;
+    width: 100%;
+    height: min-content;
+    background-color: rgb(38, 69, 90);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.how-started {
+    max-width: 1200px;
+    height: auto;
+    color: rgb(0, 0, 0);
+    background-color: aliceblue;
+    border: rgb(163, 163, 163) 0.1rem solid;
+    border-radius: 0.3rem;
+    padding: 1.8rem;
+}
+
+.how-started h2 {
+    padding: 1.3rem 0;
+    font-weight:bolder;
+    font-size: 1.8rem;
+}
+
+.how-started p ,.how-started li {
+    letter-spacing: 0.1rem;
+    line-height: 1.8rem;
+    text-align: left;
+}
+
+.how-started li{
+    padding: 0.3rem;
+}
+
 /* footer */
 
-.footer{
+.footer {
     display: flex;
     flex-direction: column;
     align-items: center;
     padding-top: 0.5rem;
     border-top: black 0.1rem solid;
-    background-color:rgb(47, 76, 90);
+    background-color: rgb(47, 76, 90);
     color: white;
 }
 
-.footer-content{
+.footer-content {
     width: max-content;
     padding: 0.3rem;
 }
-
