--- a/css/style.css
+++ b/css/style.css
@@ -162,18 +162,22 @@ main {
 
 .how-started h2 {
     padding: 1.3rem 0;
-    font-weight:bolder;
+    font-weight: bolder;
     font-size: 1.8rem;
 }
 
-.how-started p ,.how-started li {
+.how-started p,
+.how-started li {
     letter-spacing: 0.1rem;
     line-height: 1.8rem;
     text-align: left;
 }
 
-.how-started li{
-    padding: 0.3rem;
+
+.how-started ul {
+    padding: 0 1rem;
+    margin-inline-start: 1rem;
+
 }
 
 /* footer */
@@ -183,7 +187,7 @@ main {
     flex-direction: column;
     align-items: center;
     padding-top: 0.5rem;
-    border-top: black 0.1rem solid;
+    border-top: rgb(90, 90, 90) 0.1rem solid;
     background-color: rgb(47, 76, 90);
     color: white;
 }
