--- a/css/style.css
+++ b/css/style.css
@@ -60,9 +60,7 @@ main {
     align-items: center;
     justify-content: space-around;
     width: 50%;
-    height: 50%;
-    min-width: 300px;
-    min-height: 400px;
+    height: min-content;
     max-width: 800px;
     max-height: 800px;
     background: radial-gradient(circle, rgba(0, 0, 0, 1) 57%, rgba(32, 32, 32, 0.7595413165266106) 98%);
@@ -80,6 +78,7 @@ main {
 
 .options-timer {
     display: flex;
+    padding: 1rem;
     gap: 1rem;
 }
 
