--- a/css/style.css
+++ b/css/style.css
@@ -21,8 +21,11 @@ body {
     border-bottom: solid rgb(238, 234, 234) 1px;
 }
 
-.header h1 {
+.header-content {
+    font-size: 1.8rem;
     text-transform: uppercase;
+    font-weight: bolder;
+    letter-spacing: 0.1rem;
     color: white;
     background: linear-gradient(180deg, rgb(0, 0, 0) 0%, rgb(0, 0, 0) 43%, rgba(255, 255, 255, 0) 100%);
 }
@@ -32,6 +35,19 @@ body {
 .hidden {
     display: none !important;
     visibility: hidden;
+}
+
+.main-title {
+    display: block;
+    font-size: 1.8rem;
+    text-transform: uppercase;
+    font-weight: bolder;
+    letter-spacing: 0.1rem;
+    text-shadow: 0.2rem 0.3rem 0.2rem black;
+    width: 100%;
+    padding: 1rem;
+    text-align: center;
+    color: rgb(255, 20, 3);
 }
 
 main {
@@ -68,7 +84,7 @@ main {
     border-radius: 0.3rem;
     backdrop-filter: blur(3rem);
     border: solid whitesmoke 0.1rem;
-    transition:all 300ms cubic-bezier(.33, -0.94, .68, 1.86);
+    transition: all 300ms ease-in-out;
 }
 
 .pomodoro-timer-animation {
